--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
         <fieldset>
             <legend>Personal Information</legend>
 
+
+            <label for="username">Resume URL:</label>
+            <input type="text" id="username" name="username" required><br/>
+
             <label for="name">Name: </label>
             <input type="text" id="name" name="name" required><br><br>
 
