--- a/index.html
+++ b/index.html
@@ -3,69 +3,66 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Modern Resume Builder</title>
+    <title>Professional Resume Builder</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Resume Builder by Ali Hasan</h1>
-    <form id="resumeForm">
-        <fieldset>
-            <legend>Personal Information</legend>
-
-            <div class="input-group">
-                <label for="username">Resume URL:</label>
-                <input type="text" id="username" name="username" required>
+    <div class="container">
+        <h1>Resume Builder</h1>
+        <form id="resumeForm">
+            <div class="card">
+                <h2>Personal Information</h2>
+                <div class="input-group">
+                    <label for="username">Resume URL:</label>
+                    <input type="text" id="username" name="username" required>
+                </div>
+                <div class="input-group">
+                    <label for="name">Name:</label>
+                    <input type="text" id="name" name="name" required>
+                </div>
+                <div class="input-group">
+                    <label for="email">Email:</label>
+                    <input type="email" id="email" name="email" required>
+                </div>
+                <div class="input-group">
+                    <label for="phone">Phone:</label>
+                    <input type="tel" id="phone" name="phone" required>
+                </div>
+                <div class="input-group">
+                    <label for="profilePhoto">Profile Photo:</label>
+                    <input type="file" id="profilePhoto" name="profilePhoto" accept="image/*" required>
+                </div>
             </div>
 
-            <div class="input-group">
-                <label for="name">Name:</label>
-                <input type="text" id="name" name="name" required>
+            <div class="card">
+                <h2>Education</h2>
+                <div class="input-group">
+                    <label for="education">Education:</label>
+                    <textarea id="education" name="education" rows="4" required></textarea>
+                </div>
             </div>
 
-            <div class="input-group">
-                <label for="email">Email:</label>
-                <input type="email" id="email" name="email" required>
+            <div class="card">
+                <h2>Experience</h2>
+                <div class="input-group">
+                    <label for="experience">Experience:</label>
+                    <textarea id="experience" name="experience" rows="4" required></textarea>
+                </div>
             </div>
 
-            <div class="input-group">
-                <label for="phone">Phone:</label>
-                <input type="tel" id="phone" name="phone" required>
+            <div class="card">
+                <h2>Skills</h2>
+                <div class="input-group">
+                    <label for="skills">Skills:</label>
+                    <textarea id="skills" name="skills" rows="4" required></textarea>
+                </div>
             </div>
 
-            <div class="input-group">
-                <label for="profilePhoto">Profile Photo:</label>
-                <input type="file" id="profilePhoto" name="profilePhoto" accept="image/*" required>
-            </div>
-        </fieldset>
+            <button type="submit" class="submit-btn">Generate Resume</button>
+        </form>
 
-        <fieldset>
-            <legend>Education</legend>
-            <div class="input-group">
-                <label for="education">Education:</label>
-                <textarea id="education" name="education" rows="4" required></textarea>
-            </div>
-        </fieldset>
-
-        <fieldset>
-            <legend>Experience</legend>
-            <div class="input-group">
-                <label for="experience">Experience:</label>
-                <textarea id="experience" name="experience" rows="4" required></textarea>
-            </div>
-        </fieldset>
-
-        <fieldset>
-            <legend>Skills</legend>
-            <div class="input-group">
-                <label for="skills">Skills:</label>
-                <textarea id="skills" name="skills" rows="4" required></textarea>
-            </div>
-        </fieldset>
-
-        <button type="submit" class="submit-btn">Generate Resume</button>
-    </form>
-
-    <div id="resumeOutput"></div>
+        <div id="resumeOutput"></div>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
